# PyFibre

./: .coveragerc  .flake8  .gitignore  .pkl  CHANGES.rst  Dockerfile  Makefile  README.md  README.rst  make.py  pyfibre-1.5.1a-3.6.0.prof  pyfibre-1.5.1a-3.6.0.pstats  pyproject.toml  requirements.txt  requirements_mpi.txt  setup.py
.github/workflows/: install-edm-windows.cmd  macos_ci.yml  pyfibre-ci.yml  pythonapp.yml  style-check.yml
_pyfibre/: ids.py  pyfibre_runner.py
_pyfibre/cli/: __main__.py
_pyfibre/core/: base_multi_image.py  base_multi_image_analyser.py  base_pyfibre_plugin.py  i_multi_image_analyser.py  i_multi_image_reader.py  i_multi_image_viewer.py
_pyfibre/gui/: __main__.py  image_tab.py  options_pane.py  pyfibre_gui.py  pyfibre_main_task.py  pyfibre_plugin.py  (+1 more)
ci/: __main__.py
docs/: Makefile  make.bat  requirements.txt
img/: .~lock.pyfibre_gui.png#
pyfibre/: analysis.py  api.py  extraction.py  figures.py  gui.py  ids.py  image_analysis.py  main.py  metric_analysis.py  multi_image.py  preprocessing.py  pyfibre_analyse_image.py  pyfibre_metrics.py  pyfibre_runner.py  pyfibre_segmentation.py  segmentation.py  setup.py  utilities.py
pyfibre_shg_pl_trans/: setup.py
src/: analysis.py  analysis_mpi.py  anisotropy.py  darknet_pytorch.py  experimental_image.py  extraction.py  figures.py  filters.py  graphs.py  gui.py  image_tools.py  imagej_scripts.py  machine_learning.py  main.py  multi_image.py  preprocessing.py  pytorch_.py  pytorch_util.py  segmentation.py  sknw.py  utilities.py
studies/: pytorch_test.ipynb
tests/: test.py
(+467 files in other folders)
