[project]
name = "pyfibre"
version = "3.0.0"
description = "Open source image analysis toolkit for fibrous tissue"
readme = "README.md"
authors = [
    { name = "franklongford", email = "franklongford@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.5",
    "pandas[excel,hdf5]>=2.3.1",
    "scikit-image>=0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.10.1",
]
